# ooxml-rs

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  clog.sh  release.toml
examples/: xlsx.rs
examples/docx-demo/: rust-docx-rs.docx
examples/excel-demo/: demo.xlsx
examples/issue-12/: demo.xlsx
examples/simple-spreadsheet/: [Content_Types].xml  data-image-demo.xlsx
examples/simple-spreadsheet/docProps/: app.xml  core.xml  custom.xml
examples/simple-spreadsheet/xl/: sharedStrings.xml  styles.xml  workbook.xml
examples/simple-spreadsheet/xl/_rels/: workbook.xml.rels
examples/simple-spreadsheet/xl/theme/: theme1.xml
examples/simple-spreadsheet/xl/worksheets/: sheet1.xml  sheet2.xml
src/: error.rs  lib.rs  package.rs  xml.rs
src/document/: mod.rs
src/document/spreadsheet/: cell.rs  chart.rs  document_type.rs  drawing.rs  media.rs  mod.rs  shared_string.rs  style.rs  workbook.rs  worksheet.rs
src/packaging/: app_property.rs  content_type.rs  custom_property.rs  element.rs  mod.rs  namespace.rs  package.rs  property.rs  variant.rs  xml.rs  zip.rs
src/packaging/part/: container.rs  mod.rs  pair.rs
src/packaging/relationship/: mod.rs  reference.rs
