[package]
name = "ooxml"
version = "0.1.0"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
edition = "2018"
keywords = ["ooxml", "xml", "office", "word", "docx", "excel", "xlsx", "ppt", "pptx"]
license = "MIT OR Apache 2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
derivative = "2.1.1"
quick-xml = { version = "0.20.0", features = ["serialize"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
zip = "0.5.8"
url = "2.1.1"
mime = "0.3.16"
minidom = "0.12.0"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
paste = "1"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1"
snailquote = "0.3.0"