[package]
name = "ooxml"
version = "0.2.4"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
edition = "2018"
keywords = ["xml", "office", "docx", "excel", "xlsx"]
license = "MIT OR Apache-2.0"
description = "An Office OpenXML parser writen in Rust"
documentation = "https://docs.rs/ooxml"
readme = "README.md"
repository = "https://github.com/zitsen/ooxml-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
pre-release-commit-message = "release: {{version}}"
post-release-commit-message = "chore(dev): start next development iteration {{version}}"

[dependencies]
log = "0.4.11"
derivative = "2.1.1"
quick-xml = { version = "0.20.0", features = ["serialize"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
zip = "0.5.8"
url = "2.1.1"
mime = "0.3.16"
minidom = "0.12.0"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
paste = "1"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1"
snailquote = "0.3.0"
[dev-dependencies]
itertools = "0.9.0"
